shesmu-server/src/test/resources/bad/extra-action-param.shesmu
Input test;


Define standard_fastq(string s)
  Where workflow == {"BamQC 2.7+", 3 }[0]
  Where metatype == "chemical/fastq-gzip"
  Where path == foo(file_size);

Olive
  standard_fastq("a")
  Group files = List path By accession
  Run fastqc With
    memory = 4Gi,
    input = files,
    undefined = 3;
